# AIStudyProject

./: README.md  case01_fengzhuang.ipynb  main.py  pyproject.toml  test.py
.ipynb_checkpoints/: case01_fengzhuang-checkpoint.ipynb
LangChain/.ipynb_checkpoints/: LangChain向量测试-checkpoint.ipynb
LangChian/: .env  123.md  123.txt  LangChain01.ipynb  LangChain01_简单调用.ipynb  LangChain02.ipynb  LangChain03.ipynb  LangChain03_内置工具.ipynb  LangChain04.ipynb  LangChain04_FunCalling.ipynb  LangChain05.ipynb  LangChain05_Tavily搜索.ipynb  LangChain06.ipynb  LangChain07_RAG.ipynb  LangChain08.ipynb  pyproject.toml
LangGraph/: 1.LangGraph快速入门.ipynb  2.LangGraph开发工具介绍.ipynb
LangGraph/.ipynb_checkpoints/: 1.LangGraph快速入门-checkpoint.ipynb  2.LangGraph开发工具介绍-checkpoint.ipynb
LangGraph/langgraph_chatbot/: .env  graph.py  langgraph.json  requirements.txt
MCP/: README.md  httpServer.py  httpServer2.py  main.py
OCR/: MinerU.md
flask/: case01.ipynb  case01.py
flask/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  case01-checkpoint.ipynb  case01-checkpoints.ipynb
基础篇/: basename.ipynb  case01.ipynb  case02_List_大小写.ipynb  case03_元组和字典.ipynb  case04_函数_拆包_异常.ipynb  case05_包.ipynb
基础篇/.ipynb_checkpoints/: basename-checkpoint.ipynb  case01-checkpoint.ipynb  case02-checkpoint.ipynb
进阶篇/: case02_jicheng.ipynb  case03_多态.ipynb  case04_可迭代对象.ipynb  case05_thread.ipynb  case06_函数.ipynb  case07_爬虫.ipynb  case08_file.ipynb  case09_singleton.ipynb  case10.ipynb  case100_OpenAi.ipynb  case11_json.ipynb  case12_lamda.ipynb  test.txt  测试Oracle.ipynb
(+5 files in other folders)
