[project]
name = "aistudyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dmpython>=2.5.22",
    "flask>=3.1.2",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "openai>=1.95.1",
    "pydm>=1.27.2",
    "python-dotenv>=1.1.1",
]
