[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dashscope>=1.23.6",
    "gradio>=5.34.2",
    "httpx>=0.28.1",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.4",
    "lxml>=5.4.0",
    "mcp>=1.9.4",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.2",
]
